<resources>
    <string name="app_name">Comprex</string>
    <string name="title_activity_login">Entrar</string>

    <string name="action_ok">OK</string>

    <string name="login_email">E-mail</string>
    <string name="login_senha">Senha</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_cadastra_se">Cadastra-se</string>

    <string name="cadastro_usuario_nome">Nome</string>
    <string name="cadastro_usuario_email">E-mail</string>
    <string name="cadastro_usuario_senha">Senha</string>
    <string name="cadastro_usuario_confirmacao_senha">Confirmação Senha</string>
    <string name="cadastro_usuario_numero_cartao_credito">Número Cartão de Crédito</string>

    <string name="formulario_lista_nome">Nome</string>

</resources>
